services/video-mgmt/streamflix-videomgmt/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-management-service
  labels:
    app: video-management-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: video-management-service
